// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders expense form properly 1`] = `
<div
  className="vocab-form"
>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="German Word"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Eng Word"
      type="text"
      value=""
    />
    <br />
    <input
      onChange={[Function]}
      placeholder="German Sentence"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="English Sentence"
      type="text"
      value=""
    />
    <hr />
    <label
      htmlFor="difficulty"
    >
      difficulty:
    </label>
    <input
      max="10"
      min="1"
      name="difficulty"
      onChange={[Function]}
      placeholder="1"
      type="number"
      value={1}
    />
    <input
      checked={true}
      name="isShowing"
      onChange={[Function]}
      type="checkbox"
    />
    <textarea
      onChange={[Function]}
      placeholder="Add Note"
    />
    <button
      type="submit"
    >
      Add VocabItem
    </button>
  </form>
</div>
`;

exports[`should render Error with vocabform for invalid submission 1`] = `
<div
  className="vocab-form"
>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="German Word"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Eng Word"
      type="text"
      value=""
    />
    <br />
    <input
      onChange={[Function]}
      placeholder="German Sentence"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="English Sentence"
      type="text"
      value=""
    />
    <hr />
    <label
      htmlFor="difficulty"
    >
      difficulty:
    </label>
    <input
      max="10"
      min="1"
      name="difficulty"
      onChange={[Function]}
      placeholder="1"
      type="number"
      value={1}
    />
    <input
      checked={true}
      name="isShowing"
      onChange={[Function]}
      type="checkbox"
    />
    <textarea
      onChange={[Function]}
      placeholder="Add Note"
    />
    <button
      type="submit"
    >
      Add VocabItem
    </button>
  </form>
</div>
`;

exports[`should render Error with vocabform for invalid submission 2`] = `
<div
  className="vocab-form"
>
  <p
    className="form-error"
  >
    Please enter words
  </p>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="German Word"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Eng Word"
      type="text"
      value=""
    />
    <br />
    <input
      onChange={[Function]}
      placeholder="German Sentence"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="English Sentence"
      type="text"
      value=""
    />
    <hr />
    <label
      htmlFor="difficulty"
    >
      difficulty:
    </label>
    <input
      max="10"
      min="1"
      name="difficulty"
      onChange={[Function]}
      placeholder="1"
      type="number"
      value={1}
    />
    <input
      checked={true}
      name="isShowing"
      onChange={[Function]}
      type="checkbox"
    />
    <textarea
      onChange={[Function]}
      placeholder="Add Note"
    />
    <button
      type="submit"
    >
      Add VocabItem
    </button>
  </form>
</div>
`;

exports[`should render VocabForm with VocabForm Data 1`] = `
<div
  className="vocab-form"
>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="German Word"
      type="text"
      value="Ich sehne mich nach"
    />
    <input
      onChange={[Function]}
      placeholder="Eng Word"
      type="text"
      value="I long for/ I crave"
    />
    <br />
    <input
      onChange={[Function]}
      placeholder="German Sentence"
      type="text"
      value="Ich sehne mich nach Glühwein"
    />
    <input
      onChange={[Function]}
      placeholder="English Sentence"
      type="text"
      value="I'm craving Glühwein"
    />
    <hr />
    <label
      htmlFor="difficulty"
    >
      difficulty:
    </label>
    <input
      max="10"
      min="1"
      name="difficulty"
      onChange={[Function]}
      placeholder="1"
      type="number"
      value="5"
    />
    <input
      checked={true}
      name="isShowing"
      onChange={[Function]}
      type="checkbox"
    />
    <textarea
      onChange={[Function]}
      placeholder="Add Note"
    />
    <button
      type="submit"
    >
      Add VocabItem
    </button>
  </form>
</div>
`;
